syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.amit.upload.example";
option java_outer_classname = "DemoProto";
option objc_class_prefix = "RTG";

package grpcdemo;

service UploadService {
  rpc Upload(stream Chunk) returns (UploadStatus) {}
}

message Chunk {
  bytes Content = 1;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadStatus {
  string Message = 1;
  UploadStatusCode Code = 2;
}

service DownloadService {
  rpc downloadFile (DownloadFileRequest) returns (stream Chunk);
}

message DownloadFileRequest {
  string fileName = 1;
}

